--- a/frontend/html/adminAuth.htm
+++ b/frontend/html/adminAuth.htm
@@ -14,5 +14,5 @@
         </form>
     </section>
 </body>
-<script src="C:\Users\Venkitesh\git\project\frontend\js\auth.js"></script>
+<script src="../js/auth.js"></script>
 </html>
