--- a/frontend/html/adminAuth.htm
+++ b/frontend/html/adminAuth.htm
@@ -5,14 +5,14 @@
 </head>
 <body>
     <section>
-        <form action="adminDashboard.htm" method="post" name="authentication" id="authentication" class="authentication">
+        <form action="adminDashboard.htm" method="get" name="authentication" id="authentication" class="authentication" onsubmit="return Verify()">
             <label for="username">Enter your username :</label><br>
             <input type="text" name="username" id="username" minlength="3" maxlenth="15" pattern="[a-zA-Z0-9]+" required><br>
             <label for="password">Enter your password :</label><br>
             <input type="password" name="password" id="password" minlength="8" maxlength="15" pattern="[a-zA-Z0-9]+" required><br>
-            <input id="sub" type="submit" value="Submit" onclick="Verify();"></input>
+            <input id="sub" type="submit" value="Submit"></input>
         </form>
     </section>
 </body>
-<script src="C:\Users\Venkitesh\git\project\frontend\js\auth.js"></script>
+<script src="../js/auth.js"></script>
 </html>
