--- a/frontend/html/adminDashboard.htm
+++ b/frontend/html/adminDashboard.htm
@@ -2,8 +2,20 @@
 <html lang="en">
 <head>
     <title>Dashboard</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <h1>Dashboard</h1>
+    <div class="sidebar">
+        <ul>
+            <img src="../../images/images.jfif" alt="Logo">
+            <li><a href="index.html">Users</a></li>
+            <li><a href="hobbies.html">Courses</a></li>
+            <li><a href="enquiries.html">Enquiries</a></li>
+            <li><a href="categories.html">Categories</a></li>
+            <li><a href="qualifications.html">Qualifications</a></li>
+            <li><a href="batches.html">Batches</a></li>
+
+        </ul>
+    </div>
 </body>
 </html>
