--- a/frontend/html/adminDashboard.htm
+++ b/frontend/html/adminDashboard.htm
@@ -8,14 +8,19 @@
     <div class="sidebar">
         <ul>
             <img src="../../images/images.jfif" alt="Logo">
-            <li><a href="index.html">Users</a></li>
-            <li><a href="hobbies.html">Courses</a></li>
-            <li><a href="enquiries.html">Enquiries</a></li>
-            <li><a href="categories.html">Categories</a></li>
-            <li><a href="qualifications.html">Qualifications</a></li>
-            <li><a href="batches.html">Batches</a></li>
+            <li><a href="adminUser.htm">Users</a></li>
+            <li><a href="adminCourses.htm">Courses</a></li>
+            <li><a href="adminEnquiries.htm">Enquiries</a></li>
+            <li><a href="adminCategories.htm">Categories</a></li>
+            <li><a href="adminQual.htm">Qualifications</a></li>
+            <li><a href="adminBatches.htm">Batches</a></li>
 
         </ul>
     </div>
+    <nav>
+        <div class="user-name">
+            John Doe
+        </div>
+    </nav>
 </body>
 </html>
