Made changes to dashboard

--- a/frontend/html/adminDashboard.htm
+++ b/frontend/html/adminDashboard.htm
@@ -17,7 +17,7 @@
 
         </ul>
     </div>
-    <nav>
+    <nav class="navbar">
         <div class="user-name">
             John Doe
         </div>
