Added styling to all pages

--- a/frontend/html/adminCategories.htm
+++ b/frontend/html/adminCategories.htm
@@ -1,9 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Categories</title>
+    <title>Dashboard</title>
+    <link rel="stylesheet" href="../css/userStyle.css">
 </head>
 <body>
-    <h1>Categories</h1>
+    <div class="container">
+        <div class="sidebar-container">
+            <div class="sidebar">
+                <ul>
+                    <li><h1>CRM</h1></li>
+                    <li><a href="adminUser.htm">Users</a></li>
+                    <li><a href="adminCourses.htm">Courses</a></li>
+                    <li><a href="adminEnquiries.htm">Enquiries</a></li>
+                    <li><a href="adminCategories.htm">Categories</a></li>
+                    <li><a href="adminQual.htm">Qualifications</a></li>
+                    <li><a href="adminBatches.htm">Batches</a></li>
+                    <li><a href="adminAuth.htm">Logout</a></li>
+                </ul>
+            </div>
+        </div>
+        <nav class="navbar">
+            <div class="user-name">
+                John Doe
+            </div>
+        </nav>
+        <div class="content">
+            <div class="buttons">
+                <input type="text" placeholder="Search Category">
+                <button>Add Category</button>
+            </div>
+            <div class="table-container">
+                <table id="users">
+                    <tr>
+                        <th>Name</th>
+                        <th>Email</th>
+                        <th>Country</th>
+                    </tr>
+                    <tr>
+                        <td>George Fields</td>
+                        <td>george.fields@gmail.com</td>
+                        <td>Qatar</td>
+                    </tr>
+                    <tr>
+                        <td>Rebecca Moore</td>
+                        <td>rebecca.moore@gamil.com</td>
+                        <td>USA</td>
+                    </tr>
+                    <tr>
+                        <td>Jane Doe</td>
+                        <td>jane.doe@gmail.com</td>
+                        <td>Canada</td>
+                    </tr>
+                    <tr>
+                        <td>George Fields</td>
+                        <td>george.fields@gmail.com</td>
+                        <td>Qatar</td>
+                    </tr>
+                    <tr>
+                        <td>Rebecca Moore</td>
+                        <td>rebecca.moore@gamil.com</td>
+                        <td>USA</td>
+                    </tr>
+                    <tr>
+                        <td>Jane Doe</td>
+                        <td>jane.doe@gmail.com</td>
+                        <td>Canada</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
