--- a/frontend/html/adminAuth.htm
+++ b/frontend/html/adminAuth.htm
@@ -2,15 +2,27 @@
 <html lang="en">
 <head>
     <title>Authentication</title>
+    <link rel="stylesheet" href="../css/authStyle.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <section>
-        <form action="adminDashboard.htm" method="get" name="authentication" id="authentication" class="authentication" onsubmit="return Verify()">
-            <label for="username">Enter your username :</label><br>
-            <input type="text" name="username" id="username" minlength="3" maxlenth="15" pattern="[a-zA-Z0-9]+" required><br>
-            <label for="password">Enter your password :</label><br>
-            <input type="password" name="password" id="password" minlength="8" maxlength="15" pattern="[a-zA-Z0-9]+" required><br>
-            <input id="sub" type="submit" value="Submit"></input>
+    <div class="container">
+        <form action="adminDashboard.htm" method="get" name="authentication" id="authentication" class="authentication" onsubmit="return Verify()" novalidate>
+            <div class="form-control">
+                <label for="username">Enter your username :</label><br>
+                <input type="text" name="username" id="username" minlength="3" maxlenth="15" pattern="[a-zA-Z0-9]+"><br>
+                <i class="fa fa-check-circle"></i>
+                <i class="fa fa-exclamation-circle"></i>
+                <small id="errpass1" class="error">This field must not be empty!</small>
+            </div>
+            <div class="form-control">
+                <label for="password">Enter your password :</label><br>
+                <input type="password" name="password" id="password" minlength="8" maxlength="15" pattern="[a-zA-Z0-9]+"><br>
+                <i class="fa fa-check-circle"></i>
+                <i class="fa fa-exclamation-circle"></i>
+                <small id="errpass1" class="error">This field must not be empty!</small>
+            </div>
+            <button id="btn" type="submit">Submit</button>
         </form>
     </section>
 </body>
