made changes to authentication page

--- a/frontend/html/adminAuth.htm
+++ b/frontend/html/adminAuth.htm
@@ -13,14 +13,14 @@
                 <input type="text" name="username" id="username" minlength="3" maxlenth="15" pattern="[a-zA-Z0-9]+"><br>
                 <i class="fa fa-check-circle"></i>
                 <i class="fa fa-exclamation-circle"></i>
-                <small id="errpass1" class="error">This field must not be empty!</small>
+                <small id="errname" class="error">This field must not be empty!</small>
             </div>
             <div class="form-control">
                 <label for="password">Enter your password :</label><br>
                 <input type="password" name="password" id="password" minlength="8" maxlength="15" pattern="[a-zA-Z0-9]+"><br>
                 <i class="fa fa-check-circle"></i>
                 <i class="fa fa-exclamation-circle"></i>
-                <small id="errpass1" class="error">This field must not be empty!</small>
+                <small id="errpass" class="error">This field must not be empty!</small>
             </div>
             <button id="btn" type="submit">Submit</button>
         </form>
