Enquiry and login page materialize

--- a/frontend/html/v.0.0.2/userEnquiry.html
+++ b/frontend/html/v.0.0.2/userEnquiry.html
@@ -16,7 +16,7 @@
             <a href="#" data-target="slide-out" class="sidenav-trigger show-on-large"><i class="material-icons">menu</i></a>
               <a href="#" class="brand-logo center"><img src="../../images/mdlogo.png" alt="MD logo" height="60px"></a>
               <ul id="nav-mobile" class="right" style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
-                <li><a href="#">LOGOUT</a></li>
+                <li><a href="loginPage.html">LOGOUT</a></li>
               </ul>
             </div>
           </nav>
@@ -39,6 +39,76 @@
             <li><a class="waves-effect" href="#!"><i class="material-icons">thumbs_up_down</i>Rating</a></li>
             <li><a class="waves-effect" href="#!"><i class="material-icons">today</i>Schedule</a></li>
           </ul>
+          <div class="container">
+            <div class="row">
+              <form class="col s12">
+                <div class="row">
+                  <div class="input-field col s12">
+                    <textarea id="enquiry" class="materialize-textarea"></textarea>
+                    <label for="enquiry">Enquiry</label>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col s12 m4 l3">
+              <div class="card sticky-action">
+                <div class="card-image">
+                  <img src="../../images/image1.png">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+                </div>
+                <div class="card-action deep-purple lighten-1"> 
+                    <a class="btn-floating halfway-fab waves-effect waves-light red card-fab" href="#"><i class="material-icons">keyboard_arrow_right</i></a>
+                    <p><img class="circle" src="../../images/yuna.jpg" height="30px"> <em>Yuna</em><br>I am a very simple card.</p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+                    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                  </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col s12 m4 l3">
+                <div class="card sticky-action">
+                  <div class="card-image">
+                    <img src="../../images/image2.png">
+                  </div>
+                  <div class="card-content">
+                      <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+                  </div>
+                  <div class="card-action deep-purple lighten-1"> 
+                      <a class="btn-floating halfway-fab waves-effect waves-light red card-fab" href="#"><i class="material-icons">keyboard_arrow_right</i></a>
+                      <p><img class="circle" src="../../images/yuna.jpg" height="30px"> <em>Yuna</em><br>I am a very simple card.</p>
+                  </div>
+                  <div class="card-reveal">
+                      <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+                      <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                    </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col s12 m4 l3">
+                  <div class="card sticky-action">
+                    <div class="card-image">
+                      <img src="../../images/image3.png">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+                    </div>
+                    <div class="card-action deep-purple lighten-1"> 
+                        <a class="btn-floating halfway-fab waves-effect waves-light red card-fab" href="#"><i class="material-icons">keyboard_arrow_right</i></a>
+                        <p><img class="circle" src="../../images/yuna.jpg" height="30px"> <em>Yuna</em><br>I am a very simple card.</p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+                        <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                      </div>
+                  </div>
+                </div>
           
     
 
