--- a/frontend/html/v.0.0.2/loginPage.html
+++ b/frontend/html/v.0.0.2/loginPage.html
@@ -57,9 +57,7 @@
                                     <label for="password">Password</label>
                                 </div>
                             </div>
-                                <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-                                    <i class="material-icons right">send</i>
-                                </button>
+                            <a class="waves-effect waves-light btn" href="userEnquiry.html"><i class="material-icons left">send</i>Submit</a>
                         </form>
                     </div>
                     <div class="col s12" id="login">
@@ -79,9 +77,8 @@
                                 </div>
                                 </div>
                                 <a href="#">Forgot Password?</a><br><br><br>
-                                    <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-                                        <i class="material-icons right">send</i>
-                                    </button>
+                                <a class="waves-effect waves-light btn" href="userEnquiry.html"><i class="material-icons left">send</i>Submit</a>
+                                    
                                 
                         </form>
                     </div>
