Updated use cases with material design

--- a/frontend/html/v.0.0.2/adminEnquiries.html
+++ b/frontend/html/v.0.0.2/adminEnquiries.html
@@ -5,8 +5,8 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="../css/materialize.min.css" media="screen,projection" />
-    <link rel="stylesheet" href="../css/styles.css">
+    <link type="text/css" rel="stylesheet" href="../../css/materialize.min.css" media="screen,projection" />
+    <link rel="stylesheet" href="../../css/styles.css">
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -18,15 +18,15 @@
         <div class="nav-wrapper black">
             <!-- Sidebar -->
             <a href="#" class="brand-logo center">
-                <img class="brand-logo center" id="logo" src="../../images/logo.png" alt="Logo" />
+                <img class="brand-logo center" id="logo" src="../../../images/logo.png" alt="Logo" />
             </a>
             <ul id="slide-out" class="sidenav">
                 <li>
                     <div class="user-view">
                         <div class="background">
-                            <img id="sidenav-bg" src="../../images/background.png" />
+                            <img id="sidenav-bg" src="../../../images/background.png" />
                         </div>
-                        <a href="#user"><img class="circle" src="../../images/user.png" /></a>
+                        <a href="#user"><img class="circle" src="../../../images/user.png" /></a>
                         <a href="#name"><span class="white-text name">John Doe</span></a>
                         <a href="#email">
                             <span class="white-text email">jdandturk@gmail.com</span>
@@ -34,31 +34,31 @@
                     </div>
                 </li>
                 <li>
-                    <a class="waves-effect" href="#"><i class="material-icons black-text">home</i>Dashboard
+                    <a class="waves-effect" href="#"><i class="material-icons black-text">dashboard</i>Dashboard
                     </a>
                 </li>
                 <li>
-                    <a class="waves-effect" href="#"><i class="material-icons black-text">home</i>Dashboard
+                    <a class="waves-effect" href="#"><i class="material-icons black-text">group</i>Users
                     </a>
                 </li>
                 <li>
-                    <a class="waves-effect" href="#"><i class="material-icons black-text">home</i>Dashboard
+                    <a class="waves-effect" href="adminCourses.html"><i class="material-icons black-text">local_library</i>Courses
                     </a>
                 </li>
                 <li>
-                    <a class="waves-effect" href="#"><i class="material-icons black-text">home</i>Dashboard
+                    <a class="waves-effect" href="adminEnquiries.html"><i class="material-icons black-text">query_stats</i>Enquiries
                     </a>
                 </li>
                 <li>
-                    <a class="waves-effect" href="#"><i class="material-icons black-text">home</i>Dashboard
+                    <a class="waves-effect" href="adminCategories.html"><i class="material-icons black-text">category</i>Categories
                     </a>
                 </li>
                 <li>
-                    <a class="waves-effect" href="#"><i class="material-icons black-text">home</i>Dashboard
+                    <a class="waves-effect" href="adminQualifications.html"><i class="material-icons black-text">military_tech</i>Qualifications
                     </a>
                 </li>
                 <li>
-                    <a class="waves-effect" href="#"><i class="material-icons black-text">home</i>Dashboard
+                    <a class="waves-effect" href="adminBatches.html"><i class="material-icons black-text">school</i>Batches
                     </a>
                 </li>
                 <div class="footer-container">
@@ -66,7 +66,7 @@
                             <div class="divider"></div>
                         <button class="logout-button btn-large black waves-effect">
                             <li>
-                                <a class="white-text" href="#"><i
+                                <a class="white-text" href="loginPage.html"><i
                                         class="material-icons white-text">logout</i>Logout
                                 </a>
                             </li>
@@ -90,7 +90,7 @@
                     <label for="icon_prefix">Search Enquiry</label>
                 </div>
             </div>
-            <button class="btn waves-effect waves-light orange" type="submit" name="action">Add Enquiry
+            <button class="add-btn btn waves-effect waves-light orange" type="submit" name="action">Add Enquiry
                 <i class="material-icons right">add</i>
             </button>
         </div>
@@ -107,8 +107,8 @@
     </div>
 
     <!--JavaScript at end of body for optimized loading-->
-    <script type="text/javascript" src="../js/materialize.min.js"></script>
-    <script type="text/javascript" src="../js/script.js"></script>
+    <script type="text/javascript" src="../../js/materialize.min.js"></script>
+    <script type="text/javascript" src="../../js/script.js"></script>
 </body>
 
 </html>
