--- a/frontend/html/v.0.0.1/adminBatches.htm
+++ b/frontend/html/v.0.0.1/adminBatches.htm
@@ -9,6 +9,7 @@
         <div class="sidebar-container">
             <div class="sidebar">
                 <ul>
+                    <li><h1>CRM</h1></li>
                     <li><a href="adminDashboard.htm"><h1>CRM</h1></a></li>
                     <li><a href="adminUser.htm">Users</a></li>
                     <li><a href="adminCourses.htm">Courses</a></li>
