--- a/frontend/html/v.0.0.2/adminDashboard.html
+++ b/frontend/html/v.0.0.2/adminDashboard.html
@@ -5,22 +5,80 @@
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
       <link type="text/css" rel="stylesheet" href="../../css/materialize.css"  media="screen,projection"/>
-
+      <link rel="stylesheet" href="../../css/styles.css">
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
     <body>
-        <nav>
-            <div class="nav-wrapper deep-purple lighten-1">
-            <a href="#" data-target="slide-out" class="sidenav-trigger show-on-large"><i class="material-icons">menu</i></a>
-              <a href="#" class="brand-logo center"><img src="../../images/mdlogo.png" alt="MD logo" height="60px"></a>
-              <ul id="nav-mobile" class="right" style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
-                <li><a href="loginPage.html">LOGOUT</a></li>
-              </ul>
-            </div>
-          </nav>
-          <ul id="slide-out" class="sidenav">
+      <nav>
+        <div class="nav-wrapper black">
+            <!-- Sidebar -->
+            <a href="#" class="brand-logo center">
+                <img class="brand-logo center" id="logo" src="../../../images/logo.png" alt="Logo" />
+            </a>
+            <ul id="slide-out" class="sidenav">
+                <li>
+                    <div class="user-view">
+                        <div class="background">
+                            <img id="sidenav-bg" src="../../../images/background.png" />
+                        </div>
+                        <a href="#user"><img class="circle" src="../../../images/user.png" /></a>
+                        <a href="#name"><span class="white-text name">John Doe</span></a>
+                        <a href="#email">
+                            <span class="white-text email">jdandturk@gmail.com</span>
+                        </a>
+                    </div>
+                </li>
+                <li>
+                    <a class="waves-effect" href="#"><i class="material-icons black-text">dashboard</i>Dashboard
+                    </a>
+                </li>
+                <li>
+                    <a class="waves-effect" href="#"><i class="material-icons black-text">group</i>Users
+                    </a>
+                </li>
+                <li>
+                    <a class="waves-effect" href="adminCourses.html"><i
+                            class="material-icons black-text">local_library</i>Courses
+                    </a>
+                </li>
+                <li>
+                    <a class="waves-effect" href="adminEnquiries.html"><i
+                            class="material-icons black-text">query_stats</i>Enquiries
+                    </a>
+                </li>
+                <li>
+                    <a class="waves-effect" href="adminCategories.html"><i class="material-icons black-text">category</i>Categories
+                    </a>
+                </li>
+                <li>
+                    <a class="waves-effect" href="adminQualifications.html"><i
+                            class="material-icons black-text">military_tech</i>Qualifications
+                    </a>
+                </li>
+                <li>
+                    <a class="waves-effect" href="adminBatches.html"><i class="material-icons black-text">school</i>Batches
+                    </a>
+                </li>
+                <div class="footer-container">
+                    <div class="bottom">
+                        <div class="divider"></div>
+                        <button class="logout-button btn-large black waves-effect">
+                            <li>
+                                <a class="white-text" href="loginPage.html"><i class="material-icons white-text">logout</i>Logout
+                                </a>
+                            </li>
+                        </button>
+                    </div>
+                </div>
+            </ul>
+            <a href="#" data-target="slide-out" class="sidenav-trigger show-on-large">
+                <i class="material-icons">menu</i>
+            </a>
+        </div>
+    </nav>
+          <!-- <ul id="slide-out" class="sidenav">
             <li><div class="user-view">
                 <i class="left material-icons" style="color: white;">close</i>
                 <i class="right material-icons" style="color: white;">search</i>
@@ -28,8 +86,8 @@
               <div class="background">
                 <img src="../../images/office.jpg">
               </div>
-              <!-- <a href="#user"><img class="circle" src="images/yuna.jpg"></a> -->
-              <a href="#name"><span class="white-text name">John Doe</span></a>
+               <a href="#user"><img class="circle" src="images/yuna.jpg"></a> -->
+              <!-- <a href="#name"><span class="white-text name">John Doe</span></a>
               <a href="#email"><span class="white-text email">jdandturk@gmail.com</span></a>
             </div></li>
             <li><a class="waves-effect" href="#"><i class="material-icons">home</i>Home</a></li>
@@ -38,7 +96,7 @@
             <li><a class="waves-effect" href="#!"><i class="material-icons">people_outline</i>Faculty</a></li>
             <li><a class="waves-effect" href="#!"><i class="material-icons">thumbs_up_down</i>Rating</a></li>
             <li><a class="waves-effect" href="#!"><i class="material-icons">today</i>Schedule</a></li>
-          </ul>
+          </ul>  -->
           <div class="container">
             <div class="row">
               <form class="col s12">
@@ -114,19 +172,7 @@
 
       <!--JavaScript at end of body for optimized loading-->
       <script type="text/javascript" src="../../js/materialize.js"></script>
-      <script>
-        $(document).ready(function(){
-            $('.sidenav').sidenav()
-        })
-      </script>
+      <script type="text/javascript" src="../../js/script.js"></script>
     </body>
 
-      <!--JavaScript at end of body for optimized loading-->
-      <script type="text/javascript" src="../../js/materialize.js"></script>
-      <script>
-        $(document).ready(function(){
-            $('.sidenav').sidenav()
-        })
-      </script>
-    </body>
   </html>
