--- a/frontend/html/v.0.0.2/loginPage.html
+++ b/frontend/html/v.0.0.2/loginPage.html
@@ -57,7 +57,7 @@
                                     <label for="password">Password</label>
                                 </div>
                             </div>
-                            <a class="waves-effect waves-light btn" href="userEnquiry.html"><i class="material-icons left">send</i>Submit</a>
+                            <a class="waves-effect waves-light btn" href="adminDashboard.html"><i class="material-icons left">send</i>Submit</a>
                         </form>
                     </div>
                     <div class="col s12" id="login">
@@ -77,7 +77,7 @@
                                 </div>
                                 </div>
                                 <a href="#">Forgot Password?</a><br><br><br>
-                                <a class="waves-effect waves-light btn" href="userEnquiry.html"><i class="material-icons left">send</i>Submit</a>
+                                <a class="waves-effect waves-light btn" href="adminDashboard.html"><i class="material-icons left">send</i>Submit</a>
                                     
                                 
                         </form>
