--- a/frontend/html/v.0.0.2/adminCategories.html
+++ b/frontend/html/v.0.0.2/adminCategories.html
@@ -40,7 +40,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="waves-effect" href="#"><i class="material-icons black-text">group</i>Users
+                    <a class="waves-effect" href="adminUsers.html"><i class="material-icons black-text">group</i>Users
                     </a>
                 </li>
                 <li>
