--- a/frontend/html/v.0.0.2/adminQualifications.html
+++ b/frontend/html/v.0.0.2/adminQualifications.html
@@ -36,11 +36,11 @@
                     </div>
                 </li>
                 <li>
-                    <a class="waves-effect" href="#"><i class="material-icons black-text">dashboard</i>Dashboard
+                    <a class="waves-effect" href="adminDashboard.html"><i class="material-icons black-text">dashboard</i>Dashboard
                     </a>
                 </li>
                 <li>
-                    <a class="waves-effect" href="#"><i class="material-icons black-text">group</i>Users
+                    <a class="waves-effect" href="adminUsers.html"><i class="material-icons black-text">group</i>Users
                     </a>
                 </li>
                 <li>
