--- a/frontend/html/v.0.0.2/adminUsers.html
+++ b/frontend/html/v.0.0.2/adminUsers.html
@@ -91,10 +91,10 @@
                 <div class="input-field">
                     <i class="material-icons prefix">search</i>
                     <input id="icon_prefix" type="text" class="validate">
-                    <label for="icon_prefix">Search Course</label>
+                    <label for="icon_prefix">Search User</label>
                 </div>
             </div>
-            <button class="add-btn btn waves-effect waves-light orange" type="submit" name="action">Add Course
+            <button class="add-btn btn waves-effect waves-light orange" type="submit" name="action">Add User
                 <i class="material-icons right">add</i>
             </button>
 
