--- a/frontend/html/v.0.0.2/loginPage.html
+++ b/frontend/html/v.0.0.2/loginPage.html
@@ -5,6 +5,7 @@
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
       <link type="text/css" rel="stylesheet" href="../../css/materialize.css"  media="screen,projection"/>
+      <link rel="stylesheet" href="../../css/styles.css">
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -57,7 +58,7 @@
                                     <label for="password">Password</label>
                                 </div>
                             </div>
-                            <a class="waves-effect waves-light btn" href="adminDashboard.html"><i class="material-icons left">send</i>Submit</a>
+                            <a class="waves-effect waves-light btn orange" href="adminDashboard.html"><i class="material-icons left">send</i>Submit</a>
                         </form>
                     </div>
                     <div class="col s12" id="login">
@@ -76,8 +77,8 @@
                                     <label for="password">Password</label>
                                 </div>
                                 </div>
-                                <a href="#">Forgot Password?</a><br><br><br>
-                                <a class="waves-effect waves-light btn" href="adminDashboard.html"><i class="material-icons left">send</i>Submit</a>
+                                <a href="#" class="orange-text">Forgot Password?</a><br><br><br>
+                                <a class="waves-effect waves-light btn orange" href="adminDashboard.html"><i class="material-icons left">send</i>Submit</a>
                                     
                                 
                         </form>
