--- a/frontend/html/v.0.0.2/loginPage.html
+++ b/frontend/html/v.0.0.2/loginPage.html
@@ -15,12 +15,11 @@
         
         <section class="container section" id="userAuth">
             <div class="row">
-                <div class="col s12 l4">
-                    <h2 class="indigo-text text-darken-4">
-                        User Management
-                    </h2>
+                <div class="col s12 l6">
+                    <div class="logo-container">
+                        <img src="../../../images/logo-dark.png" alt="">
+                    </div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error vel fuga, distinctio aliquam sed repellendus, corporis dolor et minima consequuntur soluta vitae nisi porro exercitationem numquam. Reprehenderit iusto ab sunt.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, necessitatibus. Neque, optio! Pariatur exercitationem eius illum a assumenda consequatur dolorem incidunt illo! Beatae similique ad quas aperiam. Minima, mollitia neque?</p> 
                 </div>
                 <div class="col s12 l6 offest-l2">
                     <ul class="tabs">
