Updated login styling

--- a/frontend/html/v.0.0.2/loginPage.html
+++ b/frontend/html/v.0.0.2/loginPage.html
@@ -24,10 +24,10 @@
                 <div class="col s12 l6 offest-l2">
                     <ul class="tabs">
                         <li class="tab col s6">
-                            <a href="#register" class="indigo-text text-darken-4">Register</a>
+                            <a href="#register" class="black-text">Register</a>
                         </li>
                         <li class="tab col s6">
-                            <a href="#login" class="indigo-text text-darken-4">Login</a>
+                            <a href="#login" class="black-text">Login</a>
                         </li>
                     </ul>
                     <div class="col s12" id="register">
